--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,11 +7,29 @@
 body{
   background-color: #fff;
   font-family: Roboto;
-  font-size:
 }
 
+.container {
+  background-color:#888;
+  padding:5px;
+  border: 3px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.numberCircle {
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  padding: 13px;
+  background: #666;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+}
 
 .arrow-left {
  position: fixed;
- width: 3%;
+ top: 40px;
+ width: 10%;
 }
