--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,31 +5,70 @@
 }
 
 body{
-  background-color: #fff;
-  font-family: Roboto;
+  font-family: "Roboto";
+  margin: auto;
+  width: 375px;
 }
 
-.container {
-  background-color:#888;
-  padding:5px;
-  border: 3px;
-  font-size: 20px;
+h1{
   text-align: center;
+  color: #555;
+}
+
+.route p {
+  text-align: center;
+  font-weight:300;
 }
 
 .numberCircle {
-  border-radius: 50%;
+  position: relative;
+  border-radius: 80%;
   width: 45px;
   height: 45px;
-  padding: 13px;
-  background: #666;
+  padding: 8px;
+  background: #999;
   color: #fff;
   text-align: center;
   font-size: 20px;
 }
 
+ul{
+  list-style: none;
+}
+
+li {
+  list-style: none
+}
+
+h2{
+ color:#555;
+}
+
+h3{
+  display:inline;
+  width: 49%;
+  font-weight: 400;
+  color: #666;
+}
+
+p.frequency {
+ line-height: 30px;
+ padding-left: 100px;
+ float: right;
+ display: inline-block;
+}
+
 .arrow-left {
  position: fixed;
- top: 40px;
- width: 10%;
+ float: left;
+ top: 25px;
+ width: 3%;
+ color: #555;
+}
+
+.arrow-right {
+  position:relative;
+  float:right;
+  bottom: 95px;
+  color:#555;
 }
