--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,33 +3,33 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
+header{
+  display: block;
+  height:auto;
+}
 
 body{
   font-family: "Roboto";
   margin: auto;
-  width: 375px;
+  width: 414px;
 }
 
 h1{
   text-align: center;
   color: #555;
-}
-
-.route p {
-  text-align: center;
-  font-weight:300;
+  font-weight: normal;
 }
 
 .numberCircle {
-  position: relative;
-  border-radius: 80%;
+  border-radius: 50%;
   width: 45px;
   height: 45px;
   padding: 8px;
   background: #999;
   color: #fff;
+  display:inline;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 ul{
@@ -37,29 +37,33 @@ ul{
 }
 
 li {
-  list-style: none
+  list-style: none;
+  display: inline;
 }
 
 h2{
  color:#555;
+ font-weight:normal;
 }
 
 h3{
   display:inline;
-  width: 49%;
+  text-align: justify;
+  width: 40px;
+  font-size: 16px;
   font-weight: 400;
   color: #666;
 }
 
 p.frequency {
- line-height: 30px;
- padding-left: 100px;
- float: right;
  display: inline-block;
+ padding-left:10px;
+ font-size: 16px;
 }
 
 .arrow-left {
  position: fixed;
+ display: inline;
  float: left;
  top: 25px;
  width: 3%;
@@ -68,7 +72,9 @@ p.frequency {
 
 .arrow-right {
   position:relative;
+  display: inline-block;
   float:right;
-  bottom: 95px;
+  top: 10px;
+  width: 3%;
   color:#555;
 }
