--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,64 +1,111 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
-header{
-  display: block;
-  height:auto;
+.search {
+  width: 100%;
+  position: relative;
+}
+
+.searchTerm {
+  float: left;
+  width: 100%;
+  border: 3px solid #999;
+  padding: 5px;
+  height: 36px;
+  border-radius: 20px;
+  outline: none;
+  color: #999;
+}
+
+.searchTerm:focus{
+  color: #999;
+}
+
+.searchButton {
+  position: absolute;
+  right: -50px;
+  width: 40px;
+  height: 36px;
+  border: 1px solid #999;
+  background: #999;
+  text-align: center;
+  color: #fff;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 body{
+  background-color: #fff;
   font-family: "Roboto";
-  margin: auto;
+}
+.container{
   width: 414px;
 }
 
 h1{
   text-align: center;
   color: #555;
-  font-weight: normal;
+}
+
+h2{
+ color:#444;
+ font-weight:normal;
+}
+
+h3{
+  font-size: 18px;
+  font-weight:400;
+  color: #000;
 }
 
 .numberCircle {
   border-radius: 50%;
   width: 45px;
   height: 45px;
-  padding: 8px;
+  padding: 12px;
+  padding-left: 9px;
   background: #999;
   color: #fff;
-  display:inline;
+  display:inline-block;
   text-align: center;
   font-size: 16px;
 }
-
-ul{
-  list-style: none;
+.block {
+  background: #fff;
+  height: 75px;
 }
 
-li {
-  list-style: none;
-  display: inline;
+.block:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}
+.route{
+  display: inline-block;
+  vertical-align: middle;
+  width: 190px;
+  padding: 3px 5px;
 }
 
-h2{
- color:#555;
- font-weight:normal;
-}
+.frequency{
+  display: inline-block;
+  vertical-align: middle;
 
-h3{
-  display:inline;
-  text-align: justify;
-  width: 40px;
-  font-size: 16px;
-  font-weight: 400;
-  color: #666;
-}
-
-p.frequency {
- display: inline-block;
- padding-left:10px;
- font-size: 16px;
+  padding: 3px 13px;
 }
 
 .arrow-left {
@@ -70,11 +117,26 @@ p.frequency {
  color: #555;
 }
 
-.arrow-right {
-  position:relative;
+.arrow-right{
+  position: relative;
   display: inline-block;
+  vertical-align: middle;
   float:right;
-  top: 10px;
-  width: 3%;
+  top: 25px;
+  padding: 3px 5px;
   color:#555;
+  width: 10%;
 }
+
+/*Width for Tablets*/
+@media screen and (min-width: 600px) {
+  .container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+/*Width for Desktop*/
+@media screen and (min-width: 900px) {
+  .container {
+      width: 70%;
+    }
