--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,13 +5,15 @@
   box-sizing: border-box;
 }
 .search {
-  width: 100%;
+  width: 90%;
   position: relative;
+  padding-top: 10px;
+  padding-bottom: 50px;
 }
 
 .searchTerm {
   float: left;
-  width: 100%;
+  width: 90%;
   border: 3px solid #999;
   padding: 5px;
   height: 36px;
@@ -26,7 +28,7 @@
 
 .searchButton {
   position: absolute;
-  right: -50px;
+  right: -30px;
   width: 40px;
   height: 36px;
   border: 1px solid #999;
@@ -42,27 +44,32 @@
 .wrap{
   width: 30%;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 30%;
+  left: 30%;
   transform: translate(-50%, -50%);
 }
 
 body{
   background-color: #fff;
-  font-family: "Roboto";
-}
-.container{
+  font-family: 'Roboto';
   width: 414px;
+  padding-left: 10px;
+
+
 }
 
 h1{
   text-align: center;
+  padding-top: 80px;
+  padding-bottom: 75px;
+  font-size: 30px;
   color: #555;
 }
 
 h2{
  color:#444;
  font-weight:normal;
+ padding-top: 20px;
 }
 
 h3{
@@ -71,8 +78,19 @@ h3{
   color: #000;
 }
 
+p {
+  display:inline-block;
+  padding-left: 5px;
+  font-family: "Roboto";
+  font-size: 18px;
+  color:#555;
+}
+
+
+
 .numberCircle {
   border-radius: 50%;
+  border-top-style: ;
   width: 45px;
   height: 45px;
   padding: 12px;
@@ -86,6 +104,7 @@ h3{
 .block {
   background: #fff;
   height: 75px;
+  padding-bottom: 20px;
 }
 
 .block:before {
@@ -104,8 +123,7 @@ h3{
 .frequency{
   display: inline-block;
   vertical-align: middle;
-
-  padding: 3px 13px;
+  padding: 5px 25px;
 }
 
 .arrow-left {
@@ -113,30 +131,16 @@ h3{
  display: inline;
  float: left;
  top: 25px;
- width: 3%;
- color: #555;
+ width: 1%;
+ color: #777;
 }
 
 .arrow-right{
-  position: relative;
   display: inline-block;
   vertical-align: middle;
   float:right;
   top: 25px;
-  padding: 3px 5px;
+  padding-top: 30px;
   color:#555;
   width: 10%;
 }
-
-/*Width for Tablets*/
-@media screen and (min-width: 600px) {
-  .container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-/*Width for Desktop*/
-@media screen and (min-width: 900px) {
-  .container {
-      width: 70%;
-    }
